<resources>
    <string name="file_preferencia">dgtic.unam.autentifiacion.PREFERENCE_FILE_KEY</string>
    <string name="app_name">ModuloSiete</string>
    <string name="dispositivos_moviles_8">Dispositivos Moviles 8</string>
    <string name="constraint_layout">Constraint Layout</string>
    <string name="streaming">Streaming</string>
    <string name="mp3_player">Mp3 Player</string>
    <string name="titulo_barra">Modulo 7 de Android</string>
    <string name="logo_unam">Logo UNAM</string>
    <string name="abrir">Abrir</string>
    <string name="cerrar">Cerrar</string>
    <string name="libreria">Libreria</string>
    <string name="data_analysis">Data Analysis</string>
    <string name="python_for_data_analysis">Python for Data Analysis</string>
    <string name="idioma_ingl_s">Idioma: Inglés</string>
    <string name="genero_educacion">Genero educacion</string>
    <string name="ebook">eBooK $180.00</string>
    <string name="f_sico_250_00">Físico $250.00</string>
    <string name="texto_libro">Get complete instructions for manipulating, processing, cleaning, and crunching datasets in Python. Updated for Python 3.6,
        the second edition of this hands-on guide is packed with practical case studies that show you how to solve a broad set of data
        analysis problems effectively. You’ll learn the latest versions of pandas, NumPy, IPython, and Jupyter in the process.
    </string>
    <string name="edicion">Edicion</string>
    <string name="ediciondos">Edicion 1</string>
    <string name="ediciontres">Edicion2</string>
    <string name="categoria">Categoria</string>
    <string name="editorial">Editorial</string>
    <string name="relacionados">Relacionados</string>
    <string name="nestedscrollview">NestedScrollView</string>
    <string name="material_design">Material Design</string>
    <string-array name="lenguajes">
        <item>Java</item>
        <item>Kotlin</item>
        <item>C</item>
        <item>C++</item>
        <item>Ruby</item>
        <item>Java</item>
        <item>Kotlin</item>
        <item>C</item>
        <item>C++</item>
        <item>Ruby</item>
        <item>Java</item>
        <item>Kotlin</item>
        <item>C</item>
        <item>C++</item>
        <item>Ruby</item>
        <item>Java</item>
        <item>Kotlin</item>
        <item>C</item>
        <item>C++</item>
        <item>Ruby</item>
    </string-array>
    <string name="xbox">Consola XBOX</string>
    <string name="datos">
        Play hundreds of high-quality PC games with friends including new day one titles and get an EA Play membership.
        With games added all the time, you always have something new to play. Join now to get your first month for $1.
        Sign in for your available offers. Promotional offers may not be valid for all members and are only available
        for a limited time. Offers not valid in Russia and Turkey; other geographic restrictions may apply. Credit card
        required. After any promotional period, subscription continues automatically at regular price unless canceled.
        New subscribers only. Limits, terms, and exclusions apply. Games catalog varies. xbox.com/gamepass.
        Game Pass Availability Notice:
        Game titles, number, features, and availability vary over time, by region and platform. See the current
        game library at https://www.xbox.com/xbox-game-pass/games. Learn more about supported regions at
        https://www.xbox.com/regions.
        About Recurring Billing:
        By subscribing you are authorizing recurring payments made to Microsoft at the intervals you selected,
        until cancelled. To stop being charged, cancel your subscription in your Microsoft account
        (account.microsoft.com/services) or on your Xbox console, before the next billing date.
        Charges may be increased on at least 30 days notice as described in the Microsoft Store Terms of Sale
    </string>
    <string name="compra">Compra</string>
    <string name="xbox_imagen">xbox imagen</string>
    <string name="serie_x">Serie X</string>
    <string name="logo_compra">logo compra</string>
    <string name="collapsingtoolbarlayout">Collapsingtoolbarlayout</string>
    <string name="imagen_pelicula">Imagen Pelicula</string>
    <string name="canciones_mp3">Canciones MP3</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="btn_login">Inicia sesión</string>
    <string name="btn_login_alt">Inicia sesión</string>
    <string name="btn_signup_alt">Crea cuenta</string>
    <string name="btn_signup">Crear cuenta</string>
    <string name="view_title_login">Bienvenido</string>
    <string name="view_title_signup">Crear cuenta</string>
    <string name="input_email">Email</string>
    <string name="input_password">Contraseña</string>
    <string name="input_repeatPassword">Contraseña Repetida</string>
    <string name="ht_email">Ejemplo: user@mail.com</string>
    <string name="ht_password">La contraseña es invalida</string>
    <string name="ht_repeatpassword">Contraseñas no coinciden</string>
    <string name="input_repeatpassword">Repite la contraseña</string>
    <string name="logout">Cerrar sesión</string>
    <string name="videoActivity">Video</string>
    <string name="sonidoActivity">Sonido</string>
    <string name="RecyclerViewActivity">Recycler</string>
    <string name="SignIn">Sign In</string>
    <string name="Usuario">Usuario</string>
    <string name="Password">Password</string>
    <string name="SignUp">Sign Up</string>
    <string name="Advertisement">By Signing in into My Team you agree to our User Agreement</string>
    <string name="title_activity_landing_page">LandingPage</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_mi_vista">MiVistaActivity</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_bottom_tabs">BottomTabs</string>
    <string name="asignar">Asignar</string>
    <string name="mi_vista">Mi Vista</string>
    <string name="formularios">Formularios</string>
    <string name="MiVista">Mi Vista</string>
    <string name="Register">Register</string>
    <string name="MyCheck">My Check</string>
    <string name="MisTareas">Caminatas</string>
    <string name="MyProfile">My Profile</string>
    <string name="Logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_formulario">FormularioActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>