<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.LoginFragment"
    android:id="@+id/fragment_login"
    android:background="@color/BackgroundBlack">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/be_vietnam_bold"
        android:text="@string/SignIn"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/usuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="295dp"
        android:layout_height="200dp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/my_team_full" />

    <EditText
        android:id="@+id/password"
        android:layout_width="312dp"
        android:layout_height="wrap_content"
        android:height="35dp"
        android:background="@drawable/roundstyle"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:fontFamily="@font/be_vietnam_light"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:radius="20dp"
        android:textAlignment="center"
        android:textSize="17sp"
        app:circularflow_defaultRadius="20sp"
        app:layout_constraintBottom_toTopOf="@+id/SignIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usuario"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/SignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:fontFamily="@font/be_vietnam_light"
        android:text="@string/SignUp"
        android:onClick="click"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/Advertisement"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SignIn" />

    <com.google.android.material.chip.Chip
        android:id="@+id/SignIn"
        android:layout_width="110dp"
        android:layout_height="48dp"
        android:background="@color/Buttons"
        android:backgroundTint="@color/Buttons"
        android:fontFamily="@font/be_vietnam_light"
        android:onClick="click"
        android:text="@string/SignIn"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/SignUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <TextView
        android:id="@+id/Advertisement"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/Advertisement"
        android:textAlignment="center"
        android:textColor="@color/textBlack"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SignUp" />

    <EditText
        android:id="@+id/usuario"
        android:layout_width="312dp"
        android:layout_height="wrap_content"
        android:height="35dp"
        android:background="@drawable/roundstyle"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:fontFamily="@font/be_vietnam_light"
        android:hint="@string/Usuario"
        android:inputType="textEmailAddress"
        android:radius="20dp"
        android:textAlignment="center"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="TouchTargetSizeCheck" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="password,SignUp,textView,imageView,SignIn,usuario" />

</androidx.constraintlayout.widget.ConstraintLayout>
